# formul8-platform

./: .dockerignore  .env.build  .env.example  .env.production  .gitattributes  .gitignore  .gitmodules  .replit  .replit.deploy  .replitdeploy  AGENT_DEPLOYMENT_STATUS.md  BASELINE_TESTING_README.md  BUILD_FIX_URGENT.md  BUILD_SOLUTION_SUMMARY.md  CLOUD-RUN-DEPLOYMENT-READY.md  COMPREHENSIVE_METABOLOMICS_DASHBOARD.md  DASHBOARD_INTEGRATION_SUMMARY.md  DEMONSTRATION.md  DEPLOY-TO-GITHUB.md  DEPLOYMENT-COMMANDS.md  DEPLOYMENT-ERRORS-FIXED.md  DEPLOYMENT-FIXED-SUMMARY.md  DEPLOYMENT-FIXES-APPLIED.md  DEPLOYMENT-INSTRUCTIONS.md  DEPLOYMENT-OPTIMIZATION-COMPLETE.md  DEPLOYMENT-OPTIMIZED-FINAL.md  DEPLOYMENT-OPTIMIZED.md  DEPLOYMENT-SIZE-OPTIMIZATION-COMPLETE.md  DEPLOYMENT-SOLUTION-SUMMARY.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  DOCKER-DEPLOYMENT-INSTRUCTIONS.md  Dockerfile  Dockerfile.federated  Dockerfile.optimized  EXECUTE_SUBMODULE_SETUP.md  F8AI-DEPLOYMENT-SUMMARY.md  FRONTEND_INDEPENDENCE_SETUP.md  FRONTEND_RESTRUCTURE.md  FRONTEND_SUBMODULE_SETUP.md  (+147 more)
agents/: README.md
agents.old/formulation-agent/: README.md  agent_config.yaml  baseline-questions.json  baseline.json  pyproject.toml  requirements.txt  roadmap.md  test_astradb.py
agents.old/formulation-agent/.github/workflows/: baseline-tests.yml
agents.old/formulation-agent/metrics/: last_updated.txt
agents.old/formulation-agent/rag/: astradb_config.yaml
agents.old/formulation-agent/rag/vectorstore/: .gitkeep
agents.old/formulation-agent/test_cases/: formulation_scenarios.json
archive-python/: __init__.py  add_sample_products.py  agent_implementation.py  app.py  astradb_vector_store.py  automated-sitemap-collector.py  build_product_database.py  compliance_integration.py  dashboard.py  data_dashboard.py  debug_source_metrics.py  download_genes.py  download_genomes.py  download_regulations.py  example_rag_usage.py  flowise_import.py  leafly_scraper.py  master_collection.py  migrate_to_astradb.py  molecular_utils.py  pdf_processor.py  query_database.py  rag.py  regulatory-sitemap-generator.py  regulatory_endpoints.py  run_baseline_tests.py  scrape_leafly.py  server.py  setup_agents.py  sparql_utils.py  start_dashboards.py  state_pipeline.py  test_flask.py  test_import.py  test_mirroring.py  test_pipeline_demo.py  test_sourcing_agent.py  update_agents_astradb.py  update_regulations_daily.py  vectorize_compliance.py  (+4 more)
attached_assets/: Formul8 Product Roadmap and Scope of Work V1_1752535449207.rtf  Pasted--type-service-account-project-id-f8ai-465903-private-key-id-97a52fb7865c58c2a-1752467062594_1752467062594.txt  Pasted-Compliance-Validation-Questions-Notes-You-can-insert-in-the-state-of-XX-into-any-of-these-Ques-1753388559260_1753388559261.txt  Pasted-Formul8-Product-Roadmap-and-Scope-of-Work-Document-Purpose-This-document-defines-the-full-scope-of-1752532609977_1752532609978.txt  f8ai-465903-af09168d862e_1752470288136.json
client/: README.md  index.html  package.json  vite.config.ts
dashboard/: README.md  app.py  test_clickable_metrics.html
datasets/: README.md
docker-build-context/: .dockerignore  Dockerfile  package-lock.json  package.json
docs/: FEDERATED-DEPLOYMENT.md  README.md  agent-benchmarks.md  agent-feature-issues.md  agent-management-api.md  agent-repositories.md  agent-specifications.md  agent-submodule-guide.md  compute-needs-estimation.md  (+9 more)
(+950 files in other folders)
