# Minimal Python configuration for Node.js-primary deployment
# Full Python configuration backed up in pyproject.toml.backup

[project]
name = "formul8-platform"
version = "1.0.0"
description = "Formul8 Platform - Node.js primary deployment"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Minimal configuration to avoid conflicts with Node.js deployment
py-modules = []