[project]
name = "formulation-agent"
version = "1.0.0"
description = "🧪 Molecular analysis and cannabis formulation design using RDKit chemical informatics"
authors = [{name = "F8ai", email = "formulation-agent@f8ai.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "rdkit-pypi>=2024.03.5",
    "streamlit>=1.36.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "plotly>=5.17.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "streamlit-plotly-events>=0.0.6",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.1",
    "requests>=2.31.0",
    "openai>=1.35.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=agents --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"